# fmcsR

./: DESCRIPTION  NAMESPACE  NEWS  README  README.md  autogen.sh  config.h  config.h.in  configure  configure.ac
R/: fmcs.R  fmcsBatch.R
data/: fmcstest.rda
inst/: CITATION  NEWS.Rd
inst/unitTests/: test_main.R
man/: MCS-class.Rd  fmcs.Rd  fmcsBatch.Rd  fmcsR-package.Rd  fmcstest.Rd  mcs2sdfset.Rd  plotMCS.Rd
src/: MCS.cpp  MCS.h  MCSCompound.cpp  MCSCompound.h  MCSList.h  MCSMap.cpp  MCSMap.h  MCSRingDetector.cpp  MCSRingDetector.h  Makevars  Makevars.in  fmcs_R_wrap.cpp  util.cpp  util.h
vignettes/: Makefile  Makefile_bootstrap  bibtex.bib  fmcsR.Rmd  fmcsR.Rnw  fmcsR.html  html.template  references.bib
